// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessagesNavItem no messages 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": false,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/users/user/settings/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/users/user/settings/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/users/user/settings/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": false,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/users/user/settings/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/users/user/settings/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/users/user/settings/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": true,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/site-admin/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/site-admin/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/site-admin/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": false,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/users/user/settings/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/users/user/settings/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/users/user/settings/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": true,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/site-admin/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/site-admin/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/site-admin/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": false,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/users/user/settings/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/users/user/settings/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/users/user/settings/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  user={
    Object {
      "id": "VXNlcjox",
      "isSiteAdmin": true,
      "username": "user",
    }
  }
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <CloudCheckIconRefresh
                    className="icon-inline-md"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="phabricator-icon mdi-icon icon-inline-md"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 -4 20 20"
                      width={24}
                    >
                      <g>
                        <path
                          d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
                          fill="#798BAF"
                        />
                        <path
                          d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
                          fill="#37B24D"
                        />
                      </g>
                      <defs>
                        <clipPath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20"
                            width="20"
                          />
                        </clipPath>
                      </defs>
                    </svg>
                  </CloudCheckIconRefresh>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu p-0"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu p-0 dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <small
                  className="d-inline-block text-muted status-messages-nav-item__entry-sync"
                >
                  Code sync status
                </small>
                <StatusMessagesNavItemEntry
                  entryType="success"
                  key="up-to-date"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/site-admin/repositories"
                  message="Repositories available for search"
                >
                  <div
                    className="status-messages-nav-item__entry"
                    key="Repositories available for search"
                  >
                    <h4
                      className="d-flex align-items-center mb-0"
                    >
                      <Memo(CheckboxMarkedCircleIcon)
                        className="text-success status-messages-nav-item__entry-icon"
                        size={14}
                      />
                      Your repositories
                    </h4>
                    <div
                      className="status-messages-nav-item__entry-card status-messages-nav-item__entry-card--active status-messages-nav-item__entry--border-success"
                    >
                      <p
                        className="status-messages-nav-item__entry-message"
                      >
                        Repositories available for search
                      </p>
                      <AnchorLink
                        className="text-primary"
                        onClick={[Function]}
                        to="/site-admin/repositories"
                      >
                        <a
                          className="text-primary"
                          href="/site-admin/repositories"
                          onClick={[Function]}
                        >
                          Manage repositories
                        </a>
                      </AnchorLink>
                    </div>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;
